kubernetes/archive/deploy/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
spec:
  internalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: http
  selector:
    app: radarr
    release: radarr
  type: ClusterIP
