kubernetes/archive/deploy/radarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik-internal
  name: radarr
spec:
  rules:
  - host: radarr.vandeneede.org
    http:
      paths:
      - backend:
          service:
            name: radarr
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
